Fix counters not always being circle on mobile

--- a/src/routes/game/components/elements/countersOverlay/CountersOverlay.module.css
+++ b/src/routes/game/components/elements/countersOverlay/CountersOverlay.module.css
@@ -37,9 +37,9 @@
   height: 100%;
   max-height: 1.75em;
   min-height: 1em;
-  width: 50%;
+  width: 100%;
   max-width: 1.75em;
-  min-width: 1.25em;
+  min-width: 1em;
   font-size: 1.5em;
   background-color: var(--white);
   text-align: center;
